# mempalace-mcp-server

./: .gitignore  README.md  pyproject.toml
.githooks/: README.md  commit-msg  pre-commit
cli/: __main__.py
doc/: 00-current-mempalace.md  01-implementation-plan.md  02-technical-design.md  mempalace-server-PRD.md
examples/: config.yaml
server/: __init__.py  auth.py  config.py  dispatch.py  errors.py  logging.py  main.py  migrate.py  wal.py
server/storage/: __init__.py  drawer_id.py  graph.py  kg.py  palace.py  tunnels.py
server/tools/: __init__.py  admin.py  diary.py  drawers.py  kg.py  metadata.py  tunnels.py
spike/: harness.py  seed.py  server.py  spike-REPORT.md
tests/integration/: test_add_drawer_m1.py  test_admin_m2.py  test_graph_readers_m2.py  test_kg_m1.py  test_readers_m2.py  test_tunnels_m1.py  test_write_tools_m1.py
